--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,120 @@
-.App {
-  text-align: center;
+/*.body{
+  background-color: red;
+  height: 600px;
+}
+.style{
+  align-items: center;
+}
+button {
+  display: flex;
+  margin: 5px 5px;
+  width: 30%;
+  padding: 10px;
+  font-size: 1em;
+  font-weight: bold;
+  color: #ffffff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+button:hover {
+  background-color: #0056b3;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+form {
+  max-width: 650px;
+  margin: 0 auto;
+  padding: 25px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}*/
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Basic container for the form */
+.form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 20px;
+  max-width: 600px;
+  margin: 0 auto;
+  background-color: aquamarine;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Section headings */
+.section-heading {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-top: 20px;
+  color: #333;
+}
+
+/* Radio button groups styling */
+.radio-group {
+  
+  flex-direction: column;
+  margin: 15px 0;
+}
+
+.radio-label {
+  font-size: 1em;
+  color: #555;
+  margin-bottom: 5px;
+}
+
+/* Text input fields styling */
+.input-field {
+  width: 40%;
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+}
+
+/* Date input styling */
+.date-input {
+  width: 40%;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+}
+/*.medi{
+  display: flex;
+  
+}*/
+
+/* Submit button styling */
+.submit-button {
+  width: 50%;
+  align-items: center;
+  padding: 10px;
+  background-color: #007bff;
   color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1em;
+  font-weight: bold;
+  margin-top: 20px;
+  transition: background-color 0.3s;
 }
 
-.App-link {
-  color: #61dafb;
+.submit-button:hover {
+  background-color: #0056b3;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Disabled input styling for non-editable fields */
+.disabled-input {
+  background-color: #f1f1f1;
+  color: #888;
+  cursor: not-allowed;
+}
+.section-heading p{
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #888;
 }
